# TestProjects

FcBMP/: CMakeLists.txt  FcBMP.c  FcBMP.h
FcCore/: CMakeLists.txt
FcCore/common/: config.h.in
FcCore/include/: config.h
FcCore/src/: FcError.c  FcStatic.c
FcCore/src/Algorithm/: FcSSE2.h  FcSort.h  FcSortStatic.h  Fc_ProducerConsumer.c  Fc_ProducerConsumer.h
FcCore/src/FcGL/: FcDebug.c  FcEGL.h  FcGLX.h  FcGL_Functions.h  FcGL_Mesh.c  FcGL_Mesh.h  FcGL_Parser.h  FcGL_Program.c  FcGL_Program.h  FcWGL.h  FcWGL_Functions.h
FcCore/src/FcGL/FcGL_Control/: FcGL_Button.c  FcGL_Button.h  FcGL_ProgramGenerator.c  FcGL_ProgramGenerator.h
FcCore/src/FcGL/FcGL_Control/Shaders/: FcGL_Button.glsl
FcCore/src/FcGL/FcGL_Matrix/: FcGL_Matrix4x4.h  FcGL_Vec2.h  FcGL_Vec3.h  FcGL_Vec4.h  FcGL_Vec8.h
FcCore/src/FcImage/: FcImage.h
FcCore/src/UNIX/POSIX/: POSIX_Filesystem.h
FcCore/src/UNIX/PTHREAD/: PThread.h
FcCore/src/UNIX/X11_Window/: X11_KeyCode.h  X11_Window.c  X11_Window.h
FcCore/src/WINAPI/: WINAPI_Error.h  WINAPI_Filesystem.c  WINAPI_Filesystem.h  WINAPI_Thread.h  WINAPI_Window.c  WINAPI_Window.h
FcCore/src/include/: FcCore.h  FcError.h  FcFilesystem.h  FcMath.h  FcPNG.h  FcThread.h  FcWindow.h  FcZlib.h
FcPPM/: CMakeLists.txt  FcPPM.c  FcPPM.h
MainProject/: CMakeLists.txt
MainProject/Gallery/: compute_gaussian.glsl  compute_shift.glsl  glGallery.cpp  glGallery.h  pixel.glsl  vertex.glsl
MainProject/Program/: CMakeLists.txt
MainProject/Program/src/: main.c
MainProject/Program/src/Application/: application.c  application.h  thread_manager.c  thread_manager.h
MainProject/Program/src/Application/application_menu/: application_menu.c  application_menu.h  application_menu_fragment.glsl  application_menu_vertex.glsl
MainProject/Program/src/Images/: load_images.c  load_images.h
MainProject/Program/src/Matrix/: Matrix4x4.h  vector3.h  vector4.h
MainProject/Program/src/OpenGL/: gl_header.h  gl_main_manager.c  gl_main_manager.h  gl_main_thread.c  gl_main_thread.h  gl_mesh.c  gl_mesh.h  gl_program.c  gl_program.h
MainProject/Program/src/OpenGL/Control/: gl_button.c  gl_button.h  gl_sphere.c  gl_sphere.h
MainProject/Program/src/System_API/: system_filesystem.h  system_keyboard.h  system_thread.h  system_window.h
MainProject/Program/src/System_API/LINUX_Threads/: LINUX_Thread.c  LINUX_Thread.h
MainProject/Program/src/System_API/Windows/WGL/: WGL.c  WGL.h  WGL_Functions.h
MainProject/Program/src/System_API/Windows/WINAPI/: WINAPI_Filesystem.h  WINAPI_Thread.c  WINAPI_Thread.h  WINAPI_Window.c  WINAPI_Window.h
MainProject/Program/src/System_API/Windows/WINGDI/: WINGDI_Image.c  WINGDI_Image.cpp  WINGDI_Image.h
MainProject/Program/src/System_API/X11_Window/: X11_Filesystem.c  X11_Filesystem.h  X11_KeyCode.h  X11_Window.c  X11_Window.h
MainProject/TrueTypeLibrary/: CMakeLists.txt
ProjectMania/: CMakeLists.txt
ProjectMania/src/: App.c  App.h  SortTest.c  main.c  stb_truetype.h
ProjectMania/src/Launcher/: Home.c  Home.h  Launcher.c  Launcher.h  test.txt
ProjectMania/src/Shaders/Launcher/Home/: launcherHomeFragment.glsl  launcherHomeVertex.glsl
TrueTypeLibrary/: CMakeLists.txt
TrueTypeLibrary/src/: FcTrueTypeGL.c  FcTrueTypeGL.h  TrueTypeAlgo.h  TrueTypeCmap.c  TrueTypeCmap.h  TrueTypeError.h  TrueTypeFile.h  TrueTypeFileRead.h  TrueTypeGL.c  TrueTypeGL.h  TrueTypeGlyph.c  TrueTypeGlyph.h  TrueTypeGpos.c  TrueTypeGpos.h  TrueTypeHead.c  TrueTypeHead.h  TrueTypeHeader.h  TrueTypeHhea.c  TrueTypeHhea.h  TrueTypeHmtx.c  TrueTypeHmtx.h  TrueTypeLibrary.c  TrueTypeLibrary.h  TrueTypeLoca.h  TrueTypeMalloc.c  TrueTypeMalloc.h  TrueTypeMath.h  TrueTypeMaxp.h  TrueTypeName.h  TrueTypeOffset.h  TrueTypeSDF.h  TrueTypeSize.c  TrueTypeSize.h  TrueTypeTables.c  TrueTypeTables.h  stdafx.h
string_test/: string_test.sln
string_test/string_test/: string_test.cpp  string_test.vcxproj  string_test.vcxproj.filters  test.asm
string_test/string_test/x64/Debug/: string_test.exe.recipe  vc142.idb
string_test/string_test/x64/Debug/string_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Masm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  string_test.lastbuildstate
string_test/string_test/x64/Release/: string_test.exe.recipe
string_test/string_test/x64/Release/string_test.tlog/: CL.command.1.tlog  CL.write.1.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  clang-cl.command.1.tlog  clang-cl.delete.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  lld-link.command.1.tlog  lld-link.delete.1.tlog  lld-link.read.1.tlog  lld-link.write.1.tlog  string_test.lastbuildstate  string_test.write.1u.tlog
